# nrf52-rust-bootloader

./: Cargo.toml  memory.x  readme.md
src/: bl_cc310.rs  main.rs
